# qa-exercise-oz

./: .gitignore  README.md  config.py  main.py  pyproject.toml
tests/: AUTOMATION_TESTS.md  MANUAL_TESTING.md  cypress.config.js  mock-downstream.js  package-lock.json  package.json
tests/cypress/e2e/: mock-downstream.cy.js  proxy-service.cy.js
tests/cypress/fixtures/: mock-responses.json  requests.json
tests/cypress/support/: commands.js  e2e.js
